6 December 2021: Wouter
	- Merge PR #581 from fobser: Fix -Wmissing-prototypes and -Wshadow
	  warnings in rpz.

3 December 2021: Wouter
	- Fix compile warning for if_nametoindex on windows 64bit.

1 December 2021: Wouter
	- configure is set to 1.14.0, and release branch.
	- Fix doc/unbound.doxygen to remove obsolete tag warning.

1 December 2021: George
	- Merge PR #511 from yan12125: Reduce unnecessary linking.
	- Merge PR #493 from Jaap: Fix generation of libunbound.pc.
	- Merge PR #555 from fobser: Allow interface names as scope-id in IPv6
	  link-local addresses.
	- Merge PR #562 from Willem: Reset keepalive per new tcp session.
	- Merge PR #522 from sibeream: memory management violations fixed.
	- Merge PR #530 from Shchelk: Fix: dereferencing a null pointer.
	- Fix #454: listen_dnsport.c:825: error: ‘IPV6_TCLASS’ undeclared.
	- Fix #574: Review fixes for size allocation.

30 November 2021: Wouter
	- Fix to remove git tracking and ci information from release tarballs.
	- iana portlist update.

29 November 2021: Wouter
	- Merge PR #570 from rex4539: Fix typos.
	- Fix for #570: regen aclocal.m4, fix configure.ac for spelling.
	- Fix to make python module opt_list use opt_list_in.
	- Fix #574: unbound-checkconf reports fatal error if interface names
	  are used as value for interfaces:
	- Fix #574: Review fixes for it.
	- Fix #576: [FR] UB_* error codes in unbound.h
	- Fix #574: Review fix for spelling.

15 November 2021: Tom
	- Improve EDNS option handling, now also works for synthesised
	  responses such as local-data and server.id CH TXT responses.

5 November 2021: George
	- Fix for #558: fix loop in comm_point->tcp_free when a comm_point is
	  reclaimed more than once during callbacks.
	- Fix for #558: clear the UB_EV_TIMEOUT bit before adding an event.

5 November 2021: Wouter
	- Fix that forward-zone name is documented as the full name of the
	  zone. It is not relative but a fully qualified domain name.